--- a/src/app/pages/home/admin/admin.component.html
+++ b/src/app/pages/home/admin/admin.component.html
@@ -1,36 +1,38 @@
-<a
-    routerLink='/product/mutate'
-    class="btn btn-primary">
-        +Add new product
-</a>&nbsp;
-<button
-    class="btn btn-primary"
-    (click)="fetchAllProducts()">
-        Fetch all products
-</button>
-&nbsp;
-<hr />
-<div class="row">
-    <div class="col-md-12">
-        <div *ngIf="pageIsLoading">
-          <app-loading-spinner></app-loading-spinner>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-md-12">
+        <div class="text-center vcenter">
+          <div *ngIf="pageIsLoading">
+            <app-loading-spinner></app-loading-spinner>
+          </div>
         </div>
-        <div class="list-wrapper" *ngIf="!pageIsLoading">
-            <table class="table table-striped borderless fixed-header">
-                <thead>
-                    <tr>
-                        <th colspan="2">Item</th>
-                        <th>Unit price</th>
-                        <th>Stock</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody [hidden]="doneDeleteAllOnce" [@animateOut]="slideOut" (@animateOut.done)="endOfDeleteAllAnimation($event)">
-                    <tr [hidden]="!product.visible" *ngFor="let product of products" [@animateOut]="product.state" (@animateOut.done)="onEndDeleteProductAnimation()">
-                        <td>
-                            <img src="{{ product.imagePath }}" alt="Nike shoe" width=100px />
+          <div class="list-wrapper" *ngIf="!pageIsLoading">
+              <table class="table table-striped borderless fixed-header">
+                  <thead>
+                      <tr>
+                          <th></th>
+                          <th colspan="2" class="text-center">Item</th>
+                          <th >Unit price</th>
+                          <th>Stock</th>
+                          <th class="text-center">Actions</th>
+                      </tr>
+                  </thead>
+                  <tbody
+                  [hidden]="doneDeleteAllOnce"
+                  [@animateOut]="slideOut"
+                  (@animateOut.done)="endOfDeleteAllAnimation($event)">
+
+                    <tr
+                    class="text-left"
+                    [hidden]="!product.visible"
+                    *ngFor="let product of products"
+                    [@animateOut]="product.state"
+                    (@animateOut.done)="onEndDeleteProductAnimation()">
+                        <td></td>
+                        <td class="text-right">
+                            <img src="{{ product.imagePath }}" alt="Nike shoe" height=100px />
                         </td>
-                        <td class="vcenter">
+                        <td class="vcenter text-center">
                             {{ product.name }}
                         </td>
                         <td class="vcenter">
@@ -39,24 +41,44 @@
                         <td class="vcenter">
                             {{ product.stock }}
                         </td>
-                        <td class="vcenter">
+                        <td class="text-center vcenter">
                             <a routerLink="/product/mutate/{{ product.id }}">Edit</a>&nbsp;|
                             &nbsp;<a routerLink="/product/details/{{ product.id }}">Details</a>&nbsp;|
                             &nbsp;<a style="cursor: pointer;" (click)="deleteProduct(product)" >Delete</a>
                         </td>
                     </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
+                  </tbody>
+              </table>
+          </div>
+      </div>
+  </div>
 </div>
-<hr />
-<div class="row">
-    <div class="col-md-12">
-        <button
-            class="btn btn-primary pull-right"
-            (click)="startDeletingAllProducts()">
-                Delete all products
-        </button>
-    </div>
+<br>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-md-12">
+        <div class="container">
+          <div class="pull-right">
+            <button
+                class="btn btn-primary"
+                (click)="startDeletingAllProducts()">
+                    Delete all products
+            </button>
+            &nbsp;
+            <button
+                class="btn btn-primary"
+                (click)="fetchAllProducts()">
+                    Fetch all products
+            </button>
+            &nbsp;
+            <a
+              type="button"
+              routerLink='/product/mutate'
+              class="btn btn-default">
+                  +Add new product
+            </a>
+          </div>
+        </div>
+      </div>
+  </div>
 </div>
