--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,17 +1,21 @@
-<h1>{{ 'Shoes' | uppercase }}</h1>
-<div *ngIf="userIsConsumer(user) == true">
+<div class="jumbotron">
+  <h1 class="text-center">{{ 'Shoes' | uppercase }}</h1>
+  <p class="text-center">Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive,
+  mobile-first projects on the web.</p>
+</div>
 
-    <!-- when using output, note that the var should always be event, so $event -->
-    <app-consumer
-        [user]="user"
-        [products]="products"
-        (pageToRedirectUser)="redirectUser($event)">
-    </app-consumer>
-</div>
-<div *ngIf="userIsConsumer(user) == false">
-    <app-admin
-        [user]="user"
-        [products]="products"
-        (pageToRedirectUser)="redirectUser($event)">
-    </app-admin>
-</div>
+  <div *ngIf="userIsConsumer(user) == true">
+      <!-- when using output, note that the var should always be event, so $event -->
+      <app-consumer
+          [user]="user"
+          [products]="products"
+          (pageToRedirectUser)="redirectUser($event)">
+      </app-consumer>
+  </div>
+  <div *ngIf="userIsConsumer(user) == false">
+      <app-admin
+          [user]="user"
+          [products]="products"
+          (pageToRedirectUser)="redirectUser($event)">
+      </app-admin>
+  </div>
