--- a/src/app/product/product-item/product-mutation/product-mutation.component.html
+++ b/src/app/product/product-item/product-mutation/product-mutation.component.html
@@ -16,7 +16,7 @@
       </a>
   </div>
   <hr />
-  <div *ngIf="product != null">
+  <div *ngIf="newOrExistingProduct != null">
       <div class="form-group">
         <input
           formControlName="imagePath"
