--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -3,21 +3,22 @@
   <p class="text-center">Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive,
   mobile-first projects on the web.</p>
 </div>
-<div *ngIf="userIsConsumer(user) == true">
-    <!-- when using output, note that the var should always be event, so $event -->
-    <app-consumer
-        [user]="user"
-        [productSubs]="productSubs"
-        (pageToRedirectUser)="redirectUser($event)">
-    </app-consumer>
+<div *ngIf="userIsConsumer() == true">
+
+  <!-- consumer component -->
+  <app-consumer
+      [user]="user"
+      [productSubs]="productSubs">
+  </app-consumer>
 </div>
-<div *ngIf="userIsConsumer(user) == false">
-    <app-admin
-        [user]="user"
-        (fetchAllProductsEmitter)="fetchAllProducts()"
-        (deleteAllProducts)="deleteAllProducts()"
-        (productToDelete)="deleteProduct($event)"
-        [productSubs]="productSubs"
-        (pageToRedirectUser)="redirectUser($event)">
-    </app-admin>
+<div *ngIf="userIsConsumer() == false">
+
+  <!-- admin component -->
+  <app-admin
+      [user]="user"
+      [productSubs]="productSubs"
+      (fetchAllProductsEmitter)="fetchAllProducts()"
+      (deleteAllProducts)="deleteAllProducts()"
+      (productToDelete)="deleteProduct($event)">
+  </app-admin>
 </div>
