--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -3,7 +3,7 @@
   <p class="text-center">Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive,
   mobile-first projects on the web.</p>
 </div>
-<div *ngIf="userIsConsumer() == true">
+<div *ngIf="userIsConsumer() === true">
 
   <!-- consumer component -->
   <app-consumer
@@ -11,14 +11,11 @@
       [productSubs]="productSubs">
   </app-consumer>
 </div>
-<div *ngIf="userIsConsumer() == false">
+<div *ngIf="userIsAdmin() === true">
 
   <!-- admin component -->
   <app-admin
-      [user]="user"
       [productSubs]="productSubs"
-      (fetchAllProductsEmitter)="fetchAllProducts()"
-      (deleteAllProducts)="deleteAllProducts()"
-      (productToDelete)="deleteProduct($event)">
+      (fetchAllProductsEmitter)="fetchAllProducts()">
   </app-admin>
 </div>
