--- a/src/app/product/consumer/consumer.component.html
+++ b/src/app/product/consumer/consumer.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="text-center">
+    <!-- <div class="text-center">
       <div *ngIf="pageIsLoading">
         <app-loading-spinner></app-loading-spinner>
       </div>
-    </div>
+    </div> -->
     <div class="consumer-container" *ngIf="!pageIsLoading">
       <div *ngFor="let product of (productSubs | async)" class="col-md-2 my-card">
         <div class="no-highlight" routerLink="product/details/{{ product.id }}">
