--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,3 +1,88 @@
-<p>
-  shopping-cart works!
-</p>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-md-12">
+          <div class="list-wrapper">
+              <table class="table table-striped borderless fixed-header">
+                  <thead>
+                    <tr>
+                      <th></th>
+                      <th colspan="2" class="text-center">Item</th>
+                      <th >Unit price</th>
+                      <th>Quantity</th>
+                      <th>Total price</th>
+                      <th class="text-center">Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody
+                  [hidden]="hideAllProductsPriorToDeletingThem"
+                  [@animateOut]="slideOut"
+                  (@animateOut.done)="endOfDeleteAllAnimation()">
+                    <tr
+                    [hidden]="!shoppingCartItem.visible"
+                    [@animateOut]="shoppingCartItem.state"
+                    (@animateOut.done)="onEndDeleteShoppingCartItemAnimation()"
+                    *ngFor="let shoppingCartItem of (shoppingCartItemSubs | async)"
+
+                    class="text-left">
+                      <td></td>
+                      <td class="text-right">
+                        <img src="{{ shoppingCartItem.products.imagePath }}" alt="Nike shoe" height=100px />
+                      </td>
+                      <td class="vcenter text-center">
+                        {{ shoppingCartItem.products.name }}
+                      </td>
+                      <td class="vcenter">
+                        {{ shoppingCartItem.products.price | currency: 'EUR' }}
+                      </td>
+                      <td class="vcenter">
+                        <input
+                          onKeyDown="return false"
+                          class="form-control"
+                          min="1"
+                          max="{{ shoppingCartItem.products.stock }}"
+                          name="{{ shoppingCartItem.products.name }}"
+                          type="number"
+                          value="{{ shoppingCartItem.carts.amount }}"
+                          (change)="updateTotalPrice($event)"/>
+                      </td>
+                      <td class="vcenter">
+                        {{ shoppingCartItem.products.price * shoppingCartItem.carts.amount | currency: 'EUR' }}
+                      </td>
+                      <td class="text-center vcenter">
+                        &nbsp;<a style="cursor: pointer;" (click)="startDeletingShoppingCartItem(shoppingCartItem)" >Delete</a>
+                      </td>
+                    </tr>
+                  </tbody>
+              </table>
+          </div>
+      </div>
+  </div>
+</div>
+<br>
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-md-12">
+        <div class="container">
+          <div class="pull-right">
+            <button
+              class="btn btn-primary"
+              (click)="startDeletingAllItemsFromShoppingCart()">
+                Empty shopping cart
+            </button>
+          </div>
+        </div>
+      </div>
+  </div>
+  <div class="row subtotal">
+    <div class="col-md-4 pull-right">
+      <div class="cart">
+          YOUR ORDER
+          <hr />
+          Subtotal: {{ totalPrice | currency: 'EUR' }}
+          <br>
+          <br>
+          <a class="btn btn-primary btn-block" routerLink="/checkout" >Proceed to checkout</a>
+      </div>
+    </div>
+  </div>
+</div>
