fix add to cart, shopping-cart fetch and updating cart

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -21,7 +21,7 @@
                     [hidden]="!shoppingCartItem.visible"
                     [@animateOut]="shoppingCartItem.state"
                     (@animateOut.done)="onEndDeleteShoppingCartItemAnimation()"
-                    *ngFor="let shoppingCartItem of (shoppingCartItemSubs | async)"
+                    *ngFor="let shoppingCartItem of (shoppingCartState | async).shoppingCart"
 
                     class="text-left">
                       <td></td>
