--- a/src/app/product/admin/admin.component.html
+++ b/src/app/product/admin/admin.component.html
@@ -67,7 +67,7 @@
             &nbsp;
             <a
               type="button"
-              routerLink='/products/product/mutate'
+              routerLink='product/mutate'
               class="btn btn-default">
                 +Add new product
             </a>
