update product item page, admin and consumer to use the product state

--- a/src/app/product/admin/admin.component.html
+++ b/src/app/product/admin/admin.component.html
@@ -16,10 +16,11 @@
                   [hidden]="hideAllProductsPriorToDeletingThem"
                   [@animateOut]="slideOut"
                   (@animateOut.done)="endOfDeleteAllAnimation()">
+
                     <tr
                     class="text-left"
                     [hidden]="!product.visible"
-                    *ngFor="let product of (productSubs | async)"
+                    *ngFor="let product of products"
                     [@animateOut]="product.state"
                     (@animateOut.done)="onEndDeleteProductAnimation()">
                       <td></td>
