--- a/src/app/product/consumer/consumer.component.html
+++ b/src/app/product/consumer/consumer.component.html
@@ -1,13 +1,7 @@
 <div class="container-fluid">
   <div class="row">
-    <!-- <div class="text-center">
-      <div *ngIf="pageIsLoading">
-        <app-loading-spinner></app-loading-spinner>
-      </div>
-    </div> -->
-    <!-- TODO: Use state instead -->
     <div class="consumer-container">
-      <div *ngFor="let product of (productSubs | async)" class="col-md-2 my-card">
+      <div *ngFor="let product of products" class="col-md-2 my-card">
         <div class="no-highlight" routerLink="product/details/{{ product.id }}">
           <img src="{{ product.imagePath }}" alt="Nike shoe" class="img-responsive" /><br>
           <div class="my-card-container">
