--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -13,7 +13,10 @@
                       <th class="text-center">Actions</th>
                     </tr>
                   </thead>
-                  <tbody
+                  <div class="text-center" style="margin-top: 100px;" *ngIf="(shoppingCartState | async).loading">
+                    <app-loading-spinner></app-loading-spinner>
+                  </div>
+                  <tbody *ngIf="!(shoppingCartState | async).loading"
                   [hidden]="hideAllProductsPriorToDeletingThem"
                   [@animateOut]="slideOut"
                   (@animateOut.done)="endOfDeleteAllAnimation()">
