--- a/src/app/shopping-cart/shopping-cart.component.css
+++ b/src/app/shopping-cart/shopping-cart.component.css
@@ -7,6 +7,11 @@
   margin-top: 20px;
 }
 
+dropdown-menu {
+  z-index: 1;
+  position:relative;
+}
+
 .list-wrapper {
   height: 400px;
   overflow-y: auto;
